# my_bot

./: CMakeLists.txt  my_controller.xml  package.xml
config/: diff_drive_controllers.yaml  drive_bot.rviz  gz_bridge.yaml  mapper_params_online_async.yaml  my_controllers.yaml
description/: gazebo_control.xacro  gz_ros2_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_bot/share/ament_index/resource_index/package_run_dependencies/: my_bot
install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
install/my_bot/share/my_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_bot/share/my_bot/cmake/: my_botConfig-version.cmake  my_botConfig.cmake
install/my_bot/share/my_bot/config/: diff_drive_controllers.yaml  drive_bot.rviz  empty.yaml  gaz_ros2_ctl_use_sim.yaml  gz_bridge.yaml  my_controllers.yaml  twist_mux.yaml  view_bot.rviz
install/my_bot/share/my_bot/description/: gazebo_control.xacro  gz_ros2_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/my_bot/share/my_bot/environment/: ament_prefix_path.dsv  path.dsv
install/my_bot/share/my_bot/launch/: launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
install/my_bot/share/my_bot/worlds/: Demo.world  empty.world  obstacles.world
launch/: launch_sim.launch.py  rsp.launch.py
log/: latest_build
worlds/: Demo.world  obstacles.world
